--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
    <body>
        <h1> Reservia </h1>
        <h2> Trouvez votre hébergement pour des vacances de rêve </h2>
+       <h3> hébergement</h3>
    </body> 
 </html>
