--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
        <title> Reservia </title>
    </head> 
    <body>
-       <h1> Reservia </h1>
+       <p>
+       <img src="Projet2-Reservia/images/logo/Reservia@3x.png" alt="Logo du site" />
+       </p>
        <h2> Trouvez votre hébergement pour des vacances de rêve </h2>
+       <p>En plein centre ville ou en pleine nature</p>
    </body> 
+   <body>
+       <p>
+           <a href=#Hébergements>Hébergements</a><br/>
+           <a href=#Activités>Activités</a><br/>
+       </p>
+       <p>
+       <h2 id="Hébergements"> Hébergements à Marseille</h2>
+           <figure>
+           <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= photodeannie /></a>
+           <figcaption> Hôtel de la mer</figcaption>
+           </figure>
+        </p>
+       <h2 id="Activités" >Activités à Marseille</h2>
+ 
+   </body>
 </html>
