--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-   <head>
-       <meta charset="UTF-8" />
-       <link rel="stylesheet" type="text/css" href="styles.css">
-       <title> Reservia </title>
-   </head> 
-   <body>
-       <p>
-       <img src="Projet2-Reservia/images/logo/Reservia@3x.png" alt="Logo du site" />
-       </p>
-       <h2> Trouvez votre hébergement pour des vacances de rêve </h2>
-       <p>En plein centre ville ou en pleine nature</p>
-   </body> 
-   <body>
-       <p>
-           <a href=#Hébergements>Hébergements</a><br/>
-           <a href=#Activités>Activités</a><br/>
-       </p>
-       <p>
-       <h2 id="Hébergements"> Hébergements à Marseille</h2>
-           <figure>
-           <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= photodeannie /></a>
-           <figcaption> Hôtel de la mer</figcaption>
-           </figure>
-        </p>
-       <h2 id="Activités" >Activités à Marseille</h2>
- 
-   </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title> Reservia </title>
+    </head> 
+    <body>
+        <header>
+            <p>
+             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo" />
+            </p>
+            <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
+            <p>En plein centre ville ou en pleine nature</p>
+        </header>
+        <nav>
+            <p>
+            <a href=#Hébergements>Hébergements</a><br/>
+            <a href=#Activités>Activités</a><br/>
+            </p>
+        </nav>
+        <section>
+            <h3 id="Hébergements"> Hébergements à Marseille</h3>
+            <figure>
+            <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= photodeannie/></a>
+            <figcaption> Hôtel de la mer</figcaption>
+            </figure>
+        </section>
+        <section>
+            <h3 id="Activités" >Activités à Marseille</h3>
+            <h3>Les plus populaires</h3>
+        </section>
+        <footer>
+            <p> A propos </p>
+            <a href="#">Fonctionnement du site</a>
+        </footer>
+    </body>
 </html>
