Réalisation de l'entête

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
@@ -7,28 +7,32 @@
     </head> 
     <body>
         <header>
-            <p>
-             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo" />
-            </p>
+            <div>
+             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo" /> <br/>
+            </div>
+            <nav>
+                <ul>
+                <li><a href=#Hébergements>Hébergements</a></li> <li><a href=#Activités>Activités</a></li> <li><a href="#">S'incrire</a></li>
+                </ul>
+            </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature</p>
         </header>
-        <nav>
-            <p>
-            <a href=#Hébergements>Hébergements</a><br/>
-            <a href=#Activités>Activités</a><br/>
-            </p>
-        </nav>
         <section>
-            <h3 id="Hébergements"> Hébergements à Marseille</h3>
+            <div class="Hébergements"> Hébergements à Marseille</div> 
             <figure>
-            <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= photodeannie/></a>
+            <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= Element1/></a>
             <figcaption> Hôtel de la mer</figcaption>
             </figure>
+            <figure>
+                <a href="projet2-Reservia/images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg"> <img src="Projet2-Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Element2"/></a>
+            </figure> 
+            <figcaption>Au coeur de l'eau <br/>Chambres d'hôtes
+            </figcaption>
         </section>
         <section>
-            <h3 id="Activités" >Activités à Marseille</h3>
-            <h3>Les plus populaires</h3>
+            <div id="Activités" >Activités à Marseille</div>
+            <div class="Populaires">Les plus populaires</div>
         </section>
         <footer>
             <p> A propos </p>
