--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             </div>
             <nav>
                 <ul>
-                <li><a href=#Hébergements>Hébergements</a></li> <li><a href=#Activités>Activités</a></li> <li><a href="#">S'incrire</a></li>
+                <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
                 </ul>
             </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature</p>
         </header>
         <section>
-            <div class="Hébergements"> Hébergements à Marseille</div> 
+            <div id="Hébergements"> Hébergements à Marseille</div> 
             <figure>
             <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= Element1/></a>
             <figcaption> Hôtel de la mer</figcaption>
