--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <title> Reservia </title>
+        <title>Reservia</title>
     </head> 
+
     <body>
         <header>
             <div>
@@ -16,24 +17,44 @@
                 </ul>
             </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
-            <p>En plein centre ville ou en pleine nature</p>
+            <p>En plein centre ville ou en pleine nature </p>
+            <ol>
+                <li><strong>Filtre</strong></li><li><a href="#" class="survol">Économique</a> </li><li> <a href="#" class="survol">Familial</a></li><li><a href="#" class="survol">Romantique</a></li> <li> <a href="#" class="survol">Animaux autorisés</a></li>
+            </ol>
+            <p> Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
-        <section>
-            <div id="Hébergements"> Hébergements à Marseille</div> 
-            <figure>
-            <a href="Projet2-Reservia/images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg"><img src="Projet2-Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt= Element1/></a>
-            <figcaption> Hôtel de la mer</figcaption>
-            </figure>
-            <figure>
-                <a href="projet2-Reservia/images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg"> <img src="Projet2-Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Element2"/></a>
-            </figure> 
-            <figcaption>Au coeur de l'eau <br/>Chambres d'hôtes
-            </figcaption>
-        </section>
-        <section>
-            <div id="Activités" >Activités à Marseille</div>
-            <div class="Populaires">Les plus populaires</div>
-        </section>
+
+        <div id="Hébergements"> Hébergements à Marseille </br>
+        <img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
+             <p>Hôtel de la mer </br> Nuit à partir de 46€</p> 
+        <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
+            <p>Hôtel chez Amina </br> Nuit à partir de 96€</p>
+        <img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
+            <p>Hôtel du port </br> Nuit à partir de 52€ </p>
+        <img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/>
+            <p>Auberge la Cannebière </br> Nuit à partir de 25€</p>
+        <img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/>
+            <p>Auberge Le Panier </br> Nuit à partir de 23€</p>
+        <img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
+            <p>Hôtel les mouettes </br> Nuit à partir de 76€</p>
+        </div>
+
+        <div id="Populaires">Les plus populaires </br>
+        <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
+            <p>Au coeur de l'eau Chambres d'hôtes</br>Nuit à partir de 71€</p>
+        <img src="projet2-reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du mation">
+            <p>Hôtel le soleil du matin</br> Nuit à partir de 128€</p>
+        <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
+            <p>Hôtel tout bleu et blanc </br>Nuit à partir de 68€</p>
+        </div>
+        
+        <div id="Activités" >Activités à Marseille </br>
+        <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=""/>
+        <img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" aria-multiline=""/>
+        
+
+        </div>
+
         <footer>
             <p> A propos </p>
             <a href="#">Fonctionnement du site</a>
