--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="https://kit.fontawesome.com/e7182115d1.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
     </head> 
 
@@ -13,19 +14,19 @@
              <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo" /> <br/>
             </div>
             <nav>
-                <ul>
-                <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
-                </ul>
+            <ul>
+            <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
+            </ul>
             </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature </p>
             <ol>
-                <li><strong>Filtre</strong></li><li><a href="#" class="survol">Économique</a> </li><li> <a href="#" class="survol">Familial</a></li><li><a href="#" class="survol">Romantique</a></li> <li> <a href="#" class="survol">Animaux autorisés</a></li>
+            <li><strong>Filtres</strong></li><li><a href="#">Économique </i></a> </li><li> <a href="https://fontawesome.com/v5.15/icons/child?style=solid#">Familial</a></li><li><a href="#">Romantique</a></li> <li> <a href="#">Animaux autorisés</a></li> <!--voir-->
             </ol>
             <p> Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         <section>
-        <div id="Hébergements"> Hébergements à Marseille <br/>
+        <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
         <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
              <div class="descriptionvisuel"> Hôtel de la mer <br/> Nuit à partir de 46€</div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
@@ -41,7 +42,7 @@
         <a href="#"> <strong>Afficher plus</strong></a>
         </div>
 
-        <div id="populaires">Les plus populaires <br/>
+        <div id="populaires"><h3>Les plus populaires</h3><br/>
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€</p>
         <img src="projet2-reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du mation">
@@ -50,7 +51,7 @@
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
         </div>
         </section>
-        <div id="Activités" >Activités à Marseille <br/>
+        <div id="Activités"><h3>Activités à Marseille</h3><br/>
         <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
             <p>Notre-Dame-de-la-Garde </p>
         <img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/>
@@ -68,14 +69,14 @@
 
         <footer>
         <div class="propos"> <p> A propos </p>
-            <a href="#">Fonctionnement du site</a> <br/>
-            <a href="#">Conditions générales de vente</a><br/>
+            <a href="#">Fonctionnement du site</a> <br/><br/>
+            <a href="#">Conditions générales de vente</a><br/><br/>
             <a href="#">Données et confidentialité</a><br/></div>
         <div class="hébergements"><p> Nos hébergements</p>
-            <a href="#">Charte qualité</a><br/>
+            <a href="#">Charte qualité</a><br/><br/>
             <a href="#">Soumettre votre hôtel</a><br/></div>
         <div class="assistance"><p>Assistance</p>
-            <a href="#">Centre d'aide</a><br/>
+            <a href="#">Centre d'aide</a><br/><br/>
             <a href="#">Nous contacter</a><br/></div>
         </footer>
         </div>
