--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="bloc-page">
         <header>
             <div>
-             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo" /> <br/>
+             <img src="Projet2-Reservia/images/logo/Reservia.svg"alt="Logo du site" id="logo"/> <br/>
             </div>
             <nav>
             <ul>
@@ -51,6 +51,7 @@
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
         </div>
         </section>
+        <section>
         <div id="Activités"><h3>Activités à Marseille</h3><br/>
         <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
             <p>Notre-Dame-de-la-Garde </p>
@@ -64,8 +65,8 @@
            <p>Fort de Pomègues</p>
         <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
            <p>Vieux Port</p>
-        
         </div>
+        </section>
 
         <footer>
         <div class="propos"> <p> A propos </p>
