Ajout des logos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <script src="https://kit.fontawesome.com/e7182115d1.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/ef7377b164.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
     </head> 
 
@@ -11,7 +11,7 @@
         <div id="bloc-page">
         <header>
             <div>
-             <img src="Projet2-Reservia/images/logo/Reservia.svg"alt="Logo du site" id="logo"/> <br/>
+             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo"/> <br/>
             </div>
             <nav>
             <ul>
@@ -20,17 +20,20 @@
             </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature </p>
-            <ol>
-            <li><strong>Filtres</strong></li><li><a href="#">Économique </i></a> </li><li> <a href="https://fontawesome.com/v5.15/icons/child?style=solid#">Familial</a></li><li><a href="#">Romantique</a></li> <li> <a href="#">Animaux autorisés</a></li> <!--voir-->
-            </ol>
-            <p> Plus de 500 logements sont disponibles dans cette ville</p>
+            <i class="fa solid fa-location-dot"></i>
+            <strong>Filtres</strong> 
+            <span style="font-size: 1em;color:#0065FC;"><i class="fa solid fa-money-bill-wave"></i></span>    <a href="#">Économique</a>
+            <span style="font-size: 1em;color:#0065FC;"> <i class="fa solid fa-child"></i>  </span>       <a href="#">Familial</a>
+            <span style="font-size: 1em;color:#0065FC;"><i class="fa solid fa-heart"></i></span>     <a href="#">Romantique</a>
+            <span style="font-size: 1em;color:#0065FC;"><i class="fas fa-dog"></i></span>      <a href="#">Animaux autorisés</a>
+            <p> <span style="font-size: 1em; color: #0065FC;"> <i class="fa solid fa-circle-info"></i></span> Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         <section>
         <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
         <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
-             <div class="descriptionvisuel"> Hôtel de la mer <br/> Nuit à partir de 46€</div>
+             <div class="descriptionvisuel"> Hôtel de la mer <br/> Nuit à partir de 46€ </div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
-            <div class="descriptionvisuel">Hôtel chez Amina <br/> Nuit à partir de 96€</div>
+            <div class="descriptionvisuel">Hôtel chez Amina <br/> Nuit à partir de 96€ <i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
             <div class="descriptionvisuel">Hôtel du port <br/> Nuit à partir de 52€ </div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
