--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature </p>
-            <i class="fa solid fa-location-dot"></i>
+            <span><i class="fa solid fa-location-dot"></i></span>
             <strong>Filtres</strong> 
-            <span style="font-size: 1em;color:#0065FC;"><i class="fa solid fa-money-bill-wave"></i></span>    <a href="#">Économique</a>
-            <span style="font-size: 1em;color:#0065FC;"> <i class="fa solid fa-child"></i>  </span>       <a href="#">Familial</a>
-            <span style="font-size: 1em;color:#0065FC;"><i class="fa solid fa-heart"></i></span>     <a href="#">Romantique</a>
-            <span style="font-size: 1em;color:#0065FC;"><i class="fas fa-dog"></i></span>      <a href="#">Animaux autorisés</a>
-            <p> <span style="font-size: 1em; color: #0065FC;"> <i class="fa solid fa-circle-info"></i></span> Plus de 500 logements sont disponibles dans cette ville</p>
+            <span><i class="fa solid fa-money-bill-wave"></i></span><a href="#">Économique</a>
+            <span> <i class="fa solid fa-child"></i>  </span><a href="#">Familial</a>
+            <span><i class="fa solid fa-heart"></i></span><a href="#">Romantique</a>
+            <span><i class="fas fa-dog"></i></span><a href="#">Animaux autorisés</a>
+            <p> <span> <i class="fa solid fa-circle-info"></i></span> Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         <section>
         <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
@@ -44,7 +44,8 @@
             <div class="descriptionvisuel">Hôtel les mouettes <br/> Nuit à partir de 76€</div>
         <a href="#"> <strong>Afficher plus</strong></a>
         </div>
-
+        </section>
+            <article>
         <div id="populaires"><h3>Les plus populaires</h3><br/>
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€</p>
@@ -53,8 +54,7 @@
         <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
         </div>
-        </section>
-        <section>
+            </article>
         <div id="Activités"><h3>Activités à Marseille</h3><br/>
         <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
             <p>Notre-Dame-de-la-Garde </p>
@@ -69,7 +69,6 @@
         <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
            <p>Vieux Port</p>
         </div>
-        </section>
 
         <footer>
         <div class="propos"> <p> A propos </p>
