--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
         </div>
             </article>
+        <section>
         <div id="Activités"><h3>Activités à Marseille</h3><br/>
         <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
             <p>Notre-Dame-de-la-Garde </p>
@@ -69,6 +70,8 @@
         <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
            <p>Vieux Port</p>
         </div>
+        </section>
+
 
         <footer>
         <div class="propos"> <p> A propos </p>
