--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p> <span> <i class="fa solid fa-circle-info"></i></span> Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         <section>
+            <article>
         <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
         <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
              <div class="descriptionvisuel"> Hôtel de la mer <br/> Nuit à partir de 46€ </div>
@@ -44,8 +45,8 @@
             <div class="descriptionvisuel">Hôtel les mouettes <br/> Nuit à partir de 76€</div>
         <a href="#"> <strong>Afficher plus</strong></a>
         </div>
-        </section>
-            <article>
+            </article>
+            <aside>
         <div id="populaires"><h3>Les plus populaires</h3><br/>
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€</p>
@@ -54,8 +55,8 @@
         <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
         </div>
-            </article>
-        
+            </aside>
+            <article>
         <div id="Activités"><h3>Activités à Marseille</h3><br/>
         <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
             <p>Notre-Dame-de-la-Garde </p>
@@ -70,6 +71,8 @@
         <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
            <p>Vieux Port</p>
         </div>
+        </article>
+        </section>
 
 
         <footer>
