--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@
             <span> <i class="fa solid fa-child"></i>  </span><a href="#">Familial</a>
             <span><i class="fa solid fa-heart"></i></span><a href="#">Romantique</a>
             <span><i class="fas fa-dog"></i></span><a href="#">Animaux autorisés</a>
-            <p> <span> <i class="fa solid fa-circle-info"></i></span> Plus de 500 logements sont disponibles dans cette ville</p>
+            <p> <i class="fa solid fa-circle-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
+        
         <section>
             <article>
         <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
         <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
-             <div class="descriptionvisuel"> Hôtel de la mer <br/> Nuit à partir de 46€ </div>
+             <div class="descriptionvisuel"><strong>Hôtel de la mer</strong><br/> Nuit à partir de 46€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
-            <div class="descriptionvisuel">Hôtel chez Amina <br/> Nuit à partir de 96€ <i class="fa solid fa-star"></i></div>
+            <div class="descriptionvisuel"><strong>Hôtel chez Amina </strong><br/> Nuit à partir de 96€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
-            <div class="descriptionvisuel">Hôtel du port <br/> Nuit à partir de 52€ </div>
+            <div class="descriptionvisuel"><strong>Hôtel du port</strong> <br/> Nuit à partir de 52€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
-            <p>Auberge la Cannebière <br/> Nuit à partir de 25€</p>
+            <div class="descriptionvisuel"><strong>Auberge la Cannebière </strong><br/> Nuit à partir de 25€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i> <i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/></div>
-            <div class="descriptionvisuel">Auberge Le Panier <br/> Nuit à partir de 23€</div>
+            <div class="descriptionvisuel"><strong>Auberge Le Panier</strong> <br/> Nuit à partir de 23€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div> 
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
-            <div class="descriptionvisuel">Hôtel les mouettes <br/> Nuit à partir de 76€</div>
+            <div class="descriptionvisuel"><strong>Hôtel les mouettes </strong><br/> Nuit à partir de 76€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
+            <br/>
         <a href="#"> <strong>Afficher plus</strong></a>
         </div>
             </article>
@@ -71,7 +73,7 @@
         <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
            <p>Vieux Port</p>
         </div>
-        </article>
+           </article>
         </section>
 
 
