--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <aside>
         <div id="populaires"><h3>Les plus populaires</h3><br/>
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
-            <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€</p>
+            <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         <img src="projet2-reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du mation">
-            <p>Hôtel le soleil du matin<br/> Nuit à partir de 128€</p>
+            <p>Hôtel le soleil du matin<br/> Nuit à partir de 128€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
-            <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€</p>
+            <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         </div>
             </aside>
             <article>
