--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
             <p> <i class="fa solid fa-circle-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         
-        <section>
-            <article>
-        <div id="hébergements"><h3>Hébergements à Marseille</h3><br/>
+        <section><h3>Hébergements à Marseille</h3><br/>
+            <article id="hébergements">
         <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
              <div class="descriptionvisuel"><strong>Hôtel de la mer</strong><br/> Nuit à partir de 46€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
@@ -45,35 +44,26 @@
         <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
             <div class="descriptionvisuel"><strong>Hôtel les mouettes </strong><br/> Nuit à partir de 76€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
             <br/>
-        <a href="#"> <strong>Afficher plus</strong></a>
-        </div>
+        <span><a href="affiche"> <strong>Afficher plus</strong></a></span>
             </article>
-            <aside>
-        <div id="populaires"><h3>Les plus populaires</h3><br/>
+        <div><h3>Les plus populaires</h3><br/></div>
+            <aside id="populaires">
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         <img src="projet2-reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du mation">
             <p>Hôtel le soleil du matin<br/> Nuit à partir de 128€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
-        </div>
-            </aside>
-            <article>
-        <div id="Activités"><h3>Activités à Marseille</h3><br/>
-        <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
-            <p>Notre-Dame-de-la-Garde </p>
-        <img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/>
-            <p>Îles du Frioul</p>
-        <img src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/>
-            <p>Parc National des Calanques</p>
-        <img src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/>
-            <p>Parc Longchamp</p>
-        <img src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/>
-           <p>Fort de Pomègues</p>
-        <img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
-           <p>Vieux Port</p>
-        </div>
-           </article>
+            </aside><br/><br/>
+        <div><h3>Activités à Marseille</h3><br/></div>
+    <article id="activités">
+        <div class="photo"> <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/><p>Notre-Dame-de-la-Garde </p></div>  
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/><p>Îles du Frioul</p></div>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/><p>Parc National des Calanques</p></div>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/><p>Parc Longchamp</p></div>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/><p>Fort de Pomègues</p></div>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/> <p>Vieux Port</p></div>     
+    </article>
         </section>
 
 
