--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <p> <i class="fa solid fa-circle-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         
-        <section><h3>Hébergements à Marseille</h3><br/>
-            <article id="hébergements">
-        <div class="visuel"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
-             <div class="descriptionvisuel"><strong>Hôtel de la mer</strong><br/> Nuit à partir de 46€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
-            <div class="descriptionvisuel"><strong>Hôtel chez Amina </strong><br/> Nuit à partir de 96€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
-            <div class="descriptionvisuel"><strong>Hôtel du port</strong> <br/> Nuit à partir de 52€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
-            <div class="descriptionvisuel"><strong>Auberge la Cannebière </strong><br/> Nuit à partir de 25€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i> <i class="fa solid fa-star"></i></div>
-        <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/></div>
-            <div class="descriptionvisuel"><strong>Auberge Le Panier</strong> <br/> Nuit à partir de 23€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div> 
-        <div class="visuel"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
-            <div class="descriptionvisuel"><strong>Hôtel les mouettes </strong><br/> Nuit à partir de 76€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
+        <section>
+            <article id="hébergements"><h3>Hébergements à Marseille</h3><br/>
+        <div class="hébergements"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
+             <div class="description1"><strong>Hôtel de la mer</strong><br/> Nuit à partir de 46€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
+        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
+            <div class="description2"><strong>Hôtel chez Amina </strong><br/> Nuit à partir de 96€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
+        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
+            <div class="description3"><strong>Hôtel du port</strong> <br/> Nuit à partir de 52€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
+        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
+            <div class="description4"><strong>Auberge la Cannebière </strong><br/> Nuit à partir de 25€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i> <i class="fa solid fa-star"></i></div>
+        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/></div>
+            <div class="description5"><strong>Auberge Le Panier</strong> <br/> Nuit à partir de 23€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div> 
+        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
+            <div class="description6"><strong>Hôtel les mouettes </strong><br/> Nuit à partir de 76€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
             <br/>
         <span><a href="affiche"> <strong>Afficher plus</strong></a></span>
             </article>
@@ -55,16 +55,17 @@
         <img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
             <p>Hôtel tout bleu et blanc <br/>Nuit à partir de 68€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
             </aside><br/><br/>
-        <div><h3>Activités à Marseille</h3><br/></div>
-    <article id="activités">
-        <div class="photo"> <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/><p>Notre-Dame-de-la-Garde </p></div>  
-        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/><p>Îles du Frioul</p></div>
-        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/><p>Parc National des Calanques</p></div>
-        <div class="photo"><img src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/><p>Parc Longchamp</p></div>
-        <div class="photo"><img src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/><p>Fort de Pomègues</p></div>
-        <div class="photo"><img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/> <p>Vieux Port</p></div>     
-    </article>
         </section>
+        <h3>Activités à Marseille</h3><br/><br/>
+    <article id="activités">
+        <div class="photo"> <img src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/><p>Notre-Dame-de-la-Garde </p></div> <br/>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/><p>Îles du Frioul</p></div><br/>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/><p>Parc National des Calanques</p></div><br/>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp"/><p>Parc Longchamp</p></div><br/>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/><p>Fort de Pomègues</p></div><br/>
+        <div class="photo"><img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/> <p>Vieux Port</p></div><br/>  
+    </article>
+        
 
 
         <footer>
