Avancement corps de la page

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         
         <section>
             <article id="hébergements"><h3>Hébergements à Marseille</h3><br/>
-        <div class="hébergements"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
+        <div class="héberg"><img src="Projet2-reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/></div>
              <div class="description"><strong>Hôtel de la mer</strong><br/> Nuit à partir de 46€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
+        <div class="héberg"><img src="projet2-reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/></div>
             <div class="description"><strong>Hôtel chez Amina </strong><br/> Nuit à partir de 96€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
+        <div class="héberg"><img src="projet2-reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/></div>
             <div class="description"><strong>Hôtel du port</strong> <br/> Nuit à partir de 52€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
-        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
+        <div class="héberg"><img src="projet2-reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/></div>
             <div class="description"><strong>Auberge la Cannebière </strong><br/> Nuit à partir de 25€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i> <i class="fa solid fa-star"></i></div>
-        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/></div>
+        <div class="héberg"><img src="projet2-reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier"/></div>
             <div class="description"><strong>Auberge Le Panier</strong> <br/> Nuit à partir de 23€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div> 
-        <div class="hébergements"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
+        <div class="héberg"><img src="projet2-reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/></div>
             <div class="description"><strong>Hôtel les mouettes </strong><br/> Nuit à partir de 76€<br/><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></div>
             <br/>
         <span><a href="affiche"> <strong>Afficher plus</strong></a></span>
