--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
             <div>
              <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo"/> <br/>
             </div>
-            <nav>
-            <ul>
-            <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
-            </ul>
-            </nav>
+                <nav>
+                <ul>
+                <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
+                </ul>
+                </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature </p>
             <span><i class="fa solid fa-location-dot"></i></span>
+
             <strong>Filtres</strong> 
-            <span><i class="fa solid fa-money-bill-wave"></i></span><a href="#">Économique</a>
-            <span> <i class="fa solid fa-child"></i>  </span><a href="#">Familial</a>
-            <span><i class="fa solid fa-heart"></i></span><a href="#">Romantique</a>
-            <span><i class="fas fa-dog"></i></span><a href="#">Animaux autorisés</a>
-            <p> <i class="fa solid fa-circle-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+            <span><i class="fa solid fa-money-bill-wave"></i><a href="#">Économique</a></span>
+            <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
+            <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
+            <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span>
+
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         
         <section>
