--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 </ul>
                 </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
-            <p>En plein centre ville ou en pleine nature </p>
+            <p>En plein centre ville ou en pleine nature </br>
             <span><i class="fa solid fa-location-dot"></i></span>
 
             <strong>Filtres</strong> 
             <span><i class="fa solid fa-money-bill-wave"></i><a href="#">Économique</a></span>
             <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
             <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
-            <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span>
+            <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span></br>
 
-            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         
         <section>
