champ de recherche

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
                 </ul>
                 </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
-            <p>En plein centre ville ou en pleine nature </br>
-            <span><i class="fa solid fa-location-dot"></i></span>
+            <p>En plein centre ville ou en pleine nature </p>
+            <p>
+                <form method="POST" action="https://maps.google.fr">     
+                    <label for="clic">Rechercher</label>
+                    <input type="search" name="Rechercher" id="clic" value="Marseille,France"/> <br/>
+                </form>
+            </p>
 
             <strong>Filtres</strong> 
             <span><i class="fa solid fa-money-bill-wave"></i><a href="#">Économique</a></span>
@@ -28,7 +33,7 @@
             <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
             <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span></br>
 
-            Plus de 500 logements sont disponibles dans cette ville</p>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
         
         <section>
@@ -49,7 +54,7 @@
         <span><a href="affiche"> <strong>Afficher plus</strong></a></span>
             </article>
         
-            <aside id="populaires"> <div><h3>Les plus populaires</h3><br/></div>
+            <aside id="populaires"> <div><h3>Les plus populaires</h3></div><br/>
         <img src="Projet2-reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
             <p>Au coeur de l'eau Chambres d'hôtes<br/>Nuit à partir de 71€<i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i><i class="fa solid fa-star"></i></p>
         <img src="projet2-reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du mation">
