--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
             </div>
                 <nav>
                 <ul>
-                <li><a href='#Hébergements'>Hébergements</a></li> <li><a href='#Activités'>Activités</a></li> <li><a href="#"><span>S'inscrire</span></a></li>
+                <li><a href="#hébergements">Hébergements</a></li> <li><div><a href="#activités">Activités</a></div></li> <li><a href="#"><span>S'inscrire</span></a></li>
                 </ul>
                 </nav>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
-            <p>En plein centre ville ou en pleine nature </p>
-            <p>
+            <p>En plein centre ville ou en pleine nature </p> 
                 <form method="POST" action="https://maps.google.fr">     
-                    <label for="clic">Rechercher</label>
-                    <input type="search" name="Rechercher" id="clic" value="Marseille,France"/> <br/>
-                </form>
-            </p>
-
+                    <input type="search" name="clic" id="clic" value="Marseille, France" required/>
+                    <input id=bouton type="submit" value="Rechercher"/><br/>
+                </form> <br/>
             <strong>Filtres</strong> 
             <span><i class="fa solid fa-money-bill-wave"></i><a href="#">Économique</a></span>
             <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
             <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
-            <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span></br>
+            <span><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></span>
 
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
@@ -64,7 +61,7 @@
             </aside><br/><br/>
         </section>
         <h3>Activités à Marseille</h3><br/><br/>
-    <article id="activités">
+    <article id="activités" >
         <div class="photo"><img src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/> <p>Vieux Port</p></div><br/>  
         <div class="photo"><img src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/><p>Fort de Pomègues</p></div><br/>
         <div class="photo"><img src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/><p>Îles du Frioul</p></div><br/>
