Heberg et populaire fait

--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
                     <input type="search" name="clic" id="clic" value="Marseille, France" required/>
                     <input id=bouton type="submit" value="Rechercher"/>
                 </form> <br/>
-            <p><strong>Filtres</strong> 
+            <p><strong>Filtres
             <span><i class="fa solid fa-money-bill-wave"></i><a href="#"> Économique</a></span>
             <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
             <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
-            <span><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span></p>
+            <span><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span></strong></p>
             <div id=info>
                 <i class="fas fa-solid fa-info"></i>
             </div>
             <p>Plus de 500 logements sont disponibles dans cette ville</p><br/>
-            
         </header>
         
         <section>
