--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
         <div id="bloc-page">
         <header>
             <div class=haut>
-             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo"/> <br/>
-            
-                <nav>
+             <img src="Projet2-Reservia/images/logo/Reservia.svg" alt="Logo du site" id="logo"/> <br/><br/>
                 <div class=menu>
-                <a href="#hébergements">Hébergements</a>
-                <a href="#activités">Activités</a>
+                <a class="ancre" href="#hébergements">Hébergements</a>
+                <a class="ancre" href="#activités">Activités</a>
                 <a href="#"><div class="inscription">S'inscrire</div></a>
                 </div>
-               </nav>
             </div>
             <h3> Trouvez votre hébergement pour des vacances de rêve </h3>
             <p>En plein centre ville ou en pleine nature </p> 
@@ -29,11 +26,14 @@
                     <input id=bouton type="submit" value="Rechercher"/>
                 </form> <br/>
             <p><strong>Filtres
-            <span><i class="fa solid fa-money-bill-wave"></i><a href="#"> Économique</a></span>
-            <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
-            <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
-            <span><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span></strong><br/><br/><br/>
-            <i id="info" class="fas fa-solid fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p><br/>
+                <span><i class="fa solid fa-money-bill-wave"></i><a href="#"> Économique</a></span>
+                <span><i class="fa solid fa-child"></i><a href="#">Familial</a></span>
+                <span><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span>
+                <span><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span></strong><br/>
+            </p>
+            <div class="inf"><i id="info" class="fas fa-solid fa-info"></i>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p><br/>
+            </div>
         </header>
         
         <section>
