Finalisation mise en page site

--- a/index.html
+++ b/index.html
@@ -247,81 +247,80 @@
         <h3>Activités à Marseille</h3>
         <br /><br />
         <article id="activités">
-        <div class="grande">
-          <div class="port">
-            <a href="#">
-            <img
-              src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-              alt="Vieux Port"
-            />
-            <h4>Vieux Port</h4>
-            </a>
-            
+          <div class="grande">
+            <div class="port">
+              <a href="#">
+                <img
+                  src="projet2-reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  alt="Vieux Port"
+                />
+                <h4>Vieux Port</h4>
+              </a>
+            </div>
           </div>
-        </div>
           <br />
           <aside>
-          <div class="activités">  
-            <div class="fort">
-              <a href="#">
-              <img
-                src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                alt="Fort de Pomègues"
-              />
-              <h4>Fort de Pomègues</h4>
-              </a>
+            <div class="petite">
+              <div class="fort">
+                <a href="#">
+                  <img
+                    src="projet2-reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    alt="Fort de Pomègues"
+                  />
+                  <h4>Fort de Pomègues</h4>
+                </a>
+              </div>
             </div>
-          </div>
             <br />
-          <div class="activités">
-            <div class="iles">
-              <a href="#">
-              <img
-                src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                alt="Îles du Frioul"
-              />
-              <h4>Îles du Frioul</h4>
-              </a>
+            <div class="petite">
+              <div class="iles">
+                <a href="#">
+                  <img
+                    src="projet2-reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    alt="Îles du Frioul"
+                  />
+                  <h4>Îles du Frioul</h4>
+                </a>
+              </div>
             </div>
-          </div>
             <br />
           </aside>
-        <div class="grande">
-          <div class="calanques">
-            <a href="#">
-            <img
-              src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-              alt="Parc National des Calanques"
-            />
-            <h4>Parc National des Calanques</h4>
-            </a>
+          <div class="grande">
+            <div class="calanques">
+              <a href="#">
+                <img
+                  src="projet2-reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                  alt="Parc National des Calanques"
+                />
+                <h4>Parc National des Calanques</h4>
+              </a>
+            </div>
           </div>
-        </div>
           <br />
           <aside>
-          <div class="activités">
-            <div class="dame">
-              <a href="#">
-              <img
-                src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                alt="Notre-Dame-de-la-Garde"
-              />
-              <h4>Notre-Dame-de-la-Garde</h4>
-              </a>
+            <div class="petite">
+              <div class="dame">
+                <a href="#">
+                  <img
+                    src="projet2-reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    alt="Notre-Dame-de-la-Garde"
+                  />
+                  <h4>Notre-Dame-de-la-Garde</h4>
+                </a>
+              </div>
             </div>
-          </div>
             <br />
-           <div class="activités">
-            <div class="longchamps">
-              <a href="#"> 
-              <img
-                src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                alt="Parc Longchamp"
-              />
-              <h4>Parc Longchamp</h4>
-              </a>
+            <div class="petite">
+              <div class="longchamps">
+                <a href="#">
+                  <img
+                    src="projet2-reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    alt="Parc Longchamp"
+                  />
+                  <h4>Parc Longchamp</h4>
+                </a>
+              </div>
             </div>
-          </div>
             <br />
           </aside>
         </article>
