Mise en page pour site responsive

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https : //fonts.googleapis.com/css2? family= Raleway & family= Sawarabi+Gothic & display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https : //fonts.googleapis.com/css2? family= Raleway & family= Sawarabi+Gothic & display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/ef7377b164.js"
       crossorigin="anonymous"
@@ -41,6 +44,7 @@
             required
           />
           <input id="bouton" type="submit" value="Rechercher" />
+          <i class="fas fa-search"></i>
         </form>
         <br />
         <p>
