--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https : //fonts.googleapis.com/css2? family= Raleway & family= Sawarabi+Gothic & display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <script
       src="https://kit.fontawesome.com/ef7377b164.js"
       crossorigin="anonymous"
