--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <script
       src="https://kit.fontawesome.com/ef7377b164.js"
       crossorigin="anonymous"
@@ -246,9 +245,10 @@
       </section>
 
       <section>
-        <h3>Activités à Marseille</h3>
+        <h3 class="h3desktop">Activités à Marseille</h3>
         <br /><br />
         <article id="activités">
+        <h3 class="h3mobile">Activités à Marseille</h3>
           <div class="grande">
             <div class="port">
               <a href="#">
