Avancement version mobile footer et activités

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
           />
           <br /><br />
           <div class="menu">
-            <a class="ancre" href="#hébergements">Hébergements</a>
-            <a class="ancre" href="#activités">Activités</a>
             <a href="#"><div class="inscription">S'inscrire</div></a>
+            <a class="ancre" href="#activités">Activités</a>
+            <a class="ancre" href="#hébergements">Hébergements</a>
+            
+            
           </div>
         </div>
         <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
@@ -39,7 +41,7 @@
             required
           />
           <input id="bouton" type="submit" value="Rechercher" />
-          <i class="fas fa-search"></i>
+          <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
         <p>
