--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         </div>
         <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
         <p>En plein centre ville ou en pleine nature</p>
-
         <form class method="POST" action="https://maps.google.fr">
           <i class="fas fa-map-marker-alt"></i>
           <input
@@ -44,7 +43,7 @@
           <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
-        <p>
+        <p class="mobile_filtres">
           <strong
             >Filtres
             <span
@@ -62,6 +61,7 @@
             ></strong
           ><br />
         </p>
+    
         <div class="inf">
           <i id="info" class="fas fa-solid fa-info"></i>
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
