pb mise en page version mobile

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           />
           <br /><br />
           <nav class="headernav">
-            <a class="ancre" href="#hébergements" data-active="true">Hébergements</a>
-            <a class="ancre" href="#activités"data-active="false">Activités</a>
+            <a class="ancre" href="#hébergements">Hébergements</a>
+            <a class="ancre" href="#activités">Activités</a>
           </nav>
             <a class="inscription" href="#">S'inscrire</a>
         </div>
@@ -43,7 +43,7 @@
           <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
-        <p class="mobile_filtres">
+        <p>
           <strong
             >Filtres
             <span
