--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
           <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
-        <p>
+        <p id="mobile_filtres">
           <strong
             >Filtres
-            <span
+            <span class="filtre"
               ><i class="fa solid fa-money-bill-wave"></i
               ><a href="#"> Économique</a></span
             >
-            <span
+            <span class="filtre"
               ><i class="fa solid fa-child"></i><a href="#">Familial</a></span
             >
-            <span
+            <span class="filtre"
               ><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span
             >
-            <span
+            <span class="filtre"
               ><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span
             ></strong
           ><br />
