mobile version header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/ef7377b164.js"
       crossorigin="anonymous"
@@ -26,7 +26,7 @@
             <a class="ancre" href="#hébergements">Hébergements</a>
             <a class="ancre" href="#activités">Activités</a>
           </nav>
-            <a class="inscription" href="#">S'inscrire</a>
+          <a class="inscription" href="#">S'inscrire</a>
         </div>
         <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
         <p>En plein centre ville ou en pleine nature</p>
@@ -43,7 +43,7 @@
           <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
-        <p id="mobile_filtres">
+        <p>
           <strong
             >Filtres
             <span class="filtre"
@@ -61,7 +61,7 @@
             ></strong
           ><br />
         </p>
-    
+
         <div class="inf">
           <i id="info" class="fas fa-solid fa-info"></i>
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
@@ -250,7 +250,7 @@
         <h3 class="h3desktop">Activités à Marseille</h3>
         <br /><br />
         <article id="activités">
-        <h3 class="h3mobile">Activités à Marseille</h3>
+          <h3 class="h3mobile">Activités à Marseille</h3>
           <div class="grande">
             <div class="port">
               <a href="#">
