--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="loupe"><i class="fas fa-search"></i></div>
         </form>
         <br />
-        <p>
+        <p id="desktopversion">
           <strong
             >Filtres
             <span class="filtre"
@@ -59,6 +59,28 @@
             <span class="filtre"
               ><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span
             ></strong
+          ><br />
+        </p>
+
+        <p id="mobileversion">
+          <strong> Filtres
+            
+          <p class="mobilerow"><span
+              ><i class="fa solid fa-money-bill-wave"></i
+              ><a href="#"> Économique</a></span
+            >
+            <span 
+              ><i class="fa solid fa-child"></i><a href="#">Familial</a></span
+            >
+          </p>
+          <p class="mobilecolumn">
+            <span 
+              ><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span
+            >
+            <span 
+              ><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span>
+          </p>
+          </strong
           ><br />
         </p>
 
