flex row filtres -séparation filtres desktop et mobile

--- a/index.html
+++ b/index.html
@@ -63,26 +63,27 @@
         </p>
 
         <p id="mobileversion">
-          <strong> Filtres
-            
-          <p class="mobilerow"><span
-              ><i class="fa solid fa-money-bill-wave"></i
-              ><a href="#"> Économique</a></span
-            >
-            <span 
-              ><i class="fa solid fa-child"></i><a href="#">Familial</a></span
-            >
+          <strong> Filtres </strong>
+          <div class="mobilerow">
+            <p>
+            <span>
+            <i class="fa solid fa-money-bill-wave"></i><a href="#"> Économique</a>
+            </span>
+            <span>
+            <i class="fa solid fa-child"></i><a href="#">Familial</a>
+            </span>
           </p>
-          <p class="mobilecolumn">
-            <span 
-              ><i class="fa solid fa-heart"></i><a href="#">Romantique</a></span
-            >
-            <span 
-              ><i class="fa fa-dog"></i><a href="#">Animaux autorisés</a></span>
+          </div>
+          <div class="mobilecolumn">
+          <p>
+            <span>
+              <i class="fa solid fa-heart"></i><a href="#">Romantique</a>
+            </span>
+            <span>
+              <i class="fa fa-dog"></i><a href="#">Animaux autorisés</a>
+            </span>
           </p>
-          </strong
-          ><br />
-        </p>
+          </div>
 
         <div class="inf">
           <i id="info" class="fas fa-solid fa-info"></i>
